# openvmm

./: .gitignore  CONTRIBUTE.MD  Cargo.toml  SUPPORT.md  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: openvmm-ci.yaml  openvmm-docs-ci.yaml  openvmm-docs-pr.yaml  openvmm-pr-release.yaml  openvmm-pr.yaml  unsafe-label.yml  upload-petri-results.yml
Guide/src/: SUMMARY.md
Guide/src/user_guide/: openvmm.md
flowey/flowey/src/: lib.rs
flowey/flowey_cli/: Cargo.toml
flowey/flowey_core/: Cargo.toml
flowey/flowey_core/src/: node.rs  pipeline.rs
flowey/flowey_hvlite/: Cargo.toml
flowey/flowey_hvlite/src/: main.rs
flowey/flowey_lib_common/: Cargo.toml
flowey/flowey_lib_common/src/: download_azcopy.rs  gen_cargo_nextest_list_cmd.rs  gen_cargo_nextest_run_cmd.rs  gh_latest_completed_workflow_id.rs  gh_workflow_id.rs  install_dist_pkg.rs  lib.rs  publish_test_results.rs  run_cargo_build.rs  run_cargo_clippy.rs  run_cargo_nextest_list.rs  run_cargo_nextest_run.rs
flowey/flowey_lib_hvlite/: Cargo.toml
flowey/flowey_lib_hvlite/src/: artifact_openvmm_hcl_sizecheck.rs  build_and_test_vmgs_lib.rs  build_guest_test_uefi.rs  build_nextest_unit_tests.rs  build_nextest_vmm_tests.rs  build_openhcl_igvm_from_recipe.rs  build_openhcl_initrd.rs  build_openvmm.rs  build_openvmm_hcl.rs  build_rustdoc.rs  build_vmgstool.rs  init_cross_build.rs  init_vmm_tests_env.rs  lib.rs  run_cargo_nextest_list.rs  run_cargo_nextest_run.rs  run_igvmfilegen.rs  run_prep_steps.rs  run_split_debug_info.rs
flowey/schema_ado_yaml/src/: lib.rs
openhcl/bootloader_fdt_parser/src/: lib.rs
openhcl/diag_server/: Cargo.toml
openhcl/diag_server/src/: diag_service.rs
openhcl/hcl/: Cargo.toml
openhcl/hcl/src/: ioctl.rs  protocol.rs
openhcl/minimal_rt/src/: rt.rs
openhcl/ohcldiag-dev/src/: main.rs
openhcl/openhcl_attestation_protocol/: Cargo.toml
openhcl/openhcl_boot/: Cargo.toml  build.rs
openhcl/openhcl_boot/src/: boot_logger.rs  cmdline.rs  main.rs  memory.rs
openhcl/openhcl_dma_manager/: Cargo.toml
openhcl/openvmm_hcl/: Cargo.toml
openhcl/openvmm_hcl_resources/: Cargo.toml
openhcl/underhill_attestation/: Cargo.toml
openhcl/underhill_core/: Cargo.toml
openhcl/underhill_entry/: Cargo.toml
opentmk/: Cargo.toml  README.md  build.rs
opentmk/src/: context.rs  main.rs  tmk_assert.rs  tmk_logger.rs  tmkdefs.rs
openvmm/hvlite_core/: Cargo.toml
openvmm/openvmm_resources/: Cargo.toml
petri/: Cargo.toml
petri/guest-bootstrap/: imc.hiv  user-data  user-data-no-agent
petri/logview/: index.html  inspect.html  test.html
petri/logview_new/: README.md  index.html  package-lock.json  package.json  vite.config.ts
petri/src/: disk_image.rs  lib.rs  openhcl_diag.rs  requirements.rs  test.rs  tracing.rs  worker.rs
support/fast_memcpy/: Cargo.toml
support/fast_select/: Cargo.toml
support/guid/: Cargo.toml
support/kmsg_writer/: Cargo.toml
support/minircu/: Cargo.toml
support/nostd_spin_channel/: Cargo.toml
support/serde_helpers/: Cargo.toml
support/trycopy/: Cargo.toml
support/trycopy/benches/: perf.rs
support/trycopy/src/: aarch64.rs  lib.rs  memcpy.rs  x86_64.rs
vm/devices/storage/disk_nvme/: Cargo.toml
vm/devices/storage/disk_nvme/nvme_driver/: Cargo.toml
vm/devices/storage/disk_nvme/nvme_driver/fuzz/: fuzz_nvme_driver.rs
vm/devices/storage/disk_nvme/nvme_driver/src/: driver.rs  namespace.rs  queue_pair.rs  queues.rs  tests.rs
vm/devices/storage/disk_nvme/src/: lib.rs
vm/devices/tpm/tpm_device/: Cargo.toml
vm/devices/tpm/tpm_device/src/: lib.rs
vm/devices/tpm/tpm_guest_tests/: Cargo.toml
vm/devices/tpm/tpm_guest_tests/src/: main.rs  report.rs  tpm.rs
vm/loader/loader_defs/: Cargo.toml
vm/loader/loader_defs/src/: shim.rs
vm/whp/: Cargo.toml
vmm_core/: Cargo.toml
vmm_core/src/: acpi_builder.rs  device_builder.rs
vmm_core/vmotherboard/: Cargo.toml
vmm_tests/prep_steps/: Cargo.toml
vmm_tests/prep_steps/src/: main.rs
vmm_tests/vmm_tests/: Cargo.toml
xsync/xsync/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+489 files in other folders)
