# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "trycopy"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
zerocopy.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
]}

[[bench]]
name = "perf"
harness = false

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
