# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "loader_defs"
edition.workspace = true
rust-version.workspace = true

[features]
inspect = ["dep:inspect"]

[dependencies]
hvdef.workspace = true
open_enum.workspace = true

inspect = { workspace = true, optional = true }
mesh_protobuf.workspace = true
memory_range = { workspace = true, features = ["mesh"] }

bitfield-struct.workspace = true
igvm_defs.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true
[lints]
workspace = true
