# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "disk_nvme"
edition.workspace = true
rust-version.workspace = true

[dependencies]
disk_backend.workspace = true
nvme_common.workspace = true
nvme_driver.workspace = true
nvme_spec.workspace = true
scsi_buffers.workspace = true

inspect.workspace = true
pal.workspace = true

async-trait.workspace = true

[lints]
workspace = true
