# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "tpm_guest_tests"
rust-version.workspace = true
edition.workspace = true

[dependencies]
tpm_lib.workspace = true
tpm_protocol.workspace = true

parking_lot.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
zerocopy.workspace = true
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
